--- a/templates/admin/recipe/edit.html.twig
+++ b/templates/admin/recipe/edit.html.twig
@@ -1,4 +1,4 @@
-{% extends 'base.html.twig' %}
+{% extends 'admin/admin.html.twig' %}
 
 {% block title %}
    Modification de recette
@@ -6,5 +6,9 @@
 
 {% block body %}
 <h1> {{ recipe.title }} </h1>
+
+   <img src="{{ vich_uploader_asset(recipe, 'thumbnailFile') }}">
+
 	{{ form(form) }}
+
 {% endblock %}
