--- a/templates/admin/recipe/index.html.twig
+++ b/templates/admin/recipe/index.html.twig
@@ -1,4 +1,4 @@
-{% extends 'base.html.twig' %}
+{% extends 'admin/admin.html.twig' %}
 
 {% block title "Toutes les recettes !" %}
 
@@ -8,7 +8,7 @@
 	</h2>
 	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 
-	<a class="btn btn-primary btn-sm my-2" href="{{ path('recipe.create') }}">
+	<a class="btn btn-primary btn-sm my-2" href="{{ path('admin.recipe.create') }}">
 		Créer une recette
 	</a>
 
@@ -19,12 +19,15 @@
 					Titre
 				</th>
 				<th>
+					Catégorie
+				</th>
+				<th>
 					Date de création
 				</th>
 				<th>
 					Dernière modification
 				</th>
-				<th>
+				<th style="width: 200px">
 					Actions
 				</th>
 			</tr>
@@ -36,6 +39,9 @@
 						{{ recipe.title }}
 					</td>
 					<td>
+						{{ recipe.category.name | default('Non renseigné') }}
+					</td>
+					<td>
 						{{ recipe.createdAt | date("d:m:Y à H:i") }}
 					</td>
 					<td>
@@ -43,18 +49,18 @@
 					</td>
 					<td>
 						<div class="d-flex gap-1">
-							<a class="btn btn-warning btn-sm action" href="{{ path('recipe.show', {id: recipe.id, slug: recipe.slug}) }}">
+							<a class="btn btn-warning btn-sm action" href="{{ path('admin.recipe.show', {id: recipe.id, slug: recipe.slug}) }}">
 								<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-eye-fill" viewbox="0 0 16 16">
 									<path d="M10.5 8a2.5 2.5 0 1 1-5 0 2.5 2.5 0 0 1 5 0"/>
 									<path d="M0 8s3-5.5 8-5.5S16 8 16 8s-3 5.5-8 5.5S0 8 0 8m8 3.5a3.5 3.5 0 1 0 0-7 3.5 3.5 0 0 0 0 7"/>
 								</svg>
 							</a>
-							<a class="btn btn-primary btn-sm action" href="{{ path('recipe.edit', {id: recipe.id}) }}">
+							<a class="btn btn-primary btn-sm action" href="{{ path('admin.recipe.edit', {id: recipe.id}) }}">
 								<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil-fill" viewbox="0 0 16 16">
 									<path d="M12.854.146a.5.5 0 0 0-.707 0L10.5 1.793 14.207 5.5l1.647-1.646a.5.5 0 0 0 0-.708zm.646 6.061L9.793 2.5 3.293 9H3.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.207zm-7.468 7.468A.5.5 0 0 1 6 13.5V13h-.5a.5.5 0 0 1-.5-.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.5-.5V10h-.5a.5.5 0 0 1-.175-.032l-.179.178a.5.5 0 0 0-.11.168l-2 5a.5.5 0 0 0 .65.65l5-2a.5.5 0 0 0 .168-.11z"/>
 								</svg>
 							</a>
-							<form action="{{ path('recipe.delete', {id: recipe.id}) }}" method="post">
+							<form action="{{ path('admin.recipe.delete', {id: recipe.id}) }}" method="post">
 								<input type="hidden" name="_method" value="DELETE">
 								<button type="submit" class="btn btn-danger btn-sm action">
 									<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash3-fill" viewbox="0 0 16 16">
