--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -3,5 +3,22 @@
 {% block title %} Accueil ! {% endblock %}
 
 {% block body %}
-    Home
+    <div class="container">
+        <h1> Délices 😋 </h1>
+        <h4> Bienvenue dans votre application de recettes ! </h4>
+        <p>
+            Délices 😋 est une application dee gastronomie qui permet de partager des recettes de cuisine.
+            Vous aurez des plats venus de partout dans le monde. Cela vous offrira de nouvelles expériences culinaires.
+            De plus, vous aurez la chancee de faire partie d'une communauté internationale réunie autour du même centre d'intérêt.
+            </br>
+            Alors n'attendez plus ! 😉
+            Créez vite votre compte pour vivre des expériences inouies 🥰
+            </br>
+            Ou alors connectez-vous à votre compte, si vous en avez déjà un.
+        </p>
+        <div class="">
+            <a class="btn btn-primary connexion" href="#"> Connexion </a>
+            <a class="btn btn-info inscription" href="#"> Inscription </a>
+        </div>
+    </div>
 {% endblock %}
