--- a/templates/admin/recipe/index.html.twig
+++ b/templates/admin/recipe/index.html.twig
@@ -16,7 +16,10 @@
 		<thead>
 			<tr>
 				<th>
-					Titre
+					{{ knp_pagination_sortable(recipes, 'ID', 'r.id') }}
+				</th>
+				<th>
+					{{ knp_pagination_sortable(recipes, 'Titre', 'r.title') }}
 				</th>
 				<th>
 					Catégorie
@@ -35,6 +38,11 @@
 		<tbody>
 			{% for recipe in recipes %}
 				<tr>
+					<td>
+						<strong>
+							{{ recipe.id }}
+						</strong>
+					</td>
 					<td>
 						{{ recipe.title }}
 					</td>
@@ -74,4 +82,7 @@
 			{% endfor %}
 		</tbody>
 	</table>
+
+	{{ knp_pagination_render(recipes) }}
+
 {% endblock %}
