--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -17,8 +17,8 @@
             Ou alors connectez-vous à votre compte, si vous en avez déjà un.
         </p>
         <div class="">
-            <a class="btn btn-primary connexion" href="#"> Connexion </a>
-            <a class="btn btn-info inscription" href="#"> Inscription </a>
+            <a class="btn btn-primary connexion" href="{{ path('app_login') }}"> Connexion </a>
+            <a class="btn btn-info inscription" href="{{ path('app_register') }}"> Inscription </a>
         </div>
     </div>
 {% endblock %}
