--- a/templates/admin/category/index.html.twig
+++ b/templates/admin/category/index.html.twig
@@ -3,38 +3,42 @@
 {% block title 'Catégories' %}
 
 {% block body %}
-<h1>
-	Catégories
-</h1>
-<p>
-	<a class="btn btn-primary btn-sm" href="{{ path('admin.category.create') }}">
-		Créer une nouvelle catégorie
-	</a>
-</p>
+	<h1>
+		Catégories
+	</h1>
+	<p>
+		<a class="btn btn-primary btn-sm mt-4" href="{{ path('admin.category.create') }}">
+			Créer une catégorie
+		</a>
+	</p>
 
-<table class="table table-striped table-hover">
-	<thead>
-		<tr>
-			<th>Nom de la catégorie</th>
-			<th>Date de création</th>
-			<th style="width: 200px">Actions</th>
-		</tr>
-	</thead>
-	<tbody>
-		{% for category in categories %}
+	<table class="table table-warning table-striped table-hover">
+		<thead>
 			<tr>
-				<td>
-					{{ category.name }}
-				</td>
-				<td>
-					{{ category.createdAt | date("d:m:Y à H:i") }}
-				</td>
-				<td class="d-flex gap-1">
-					<a href="{{ path('admin.category.edit', {id: category.id, slug: category.slug}) }}" class="btn btn-primary btn-sm action">
-						<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil-fill" viewbox="0 0 16 16">
-							<path d="M12.854.146a.5.5 0 0 0-.707 0L10.5 1.793 14.207 5.5l1.647-1.646a.5.5 0 0 0 0-.708zm.646 6.061L9.793 2.5 3.293 9H3.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.207zm-7.468 7.468A.5.5 0 0 1 6 13.5V13h-.5a.5.5 0 0 1-.5-.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.5-.5V10h-.5a.5.5 0 0 1-.175-.032l-.179.178a.5.5 0 0 0-.11.168l-2 5a.5.5 0 0 0 .65.65l5-2a.5.5 0 0 0 .168-.11z"/>
-						</svg>
-					</a>
+				<th>Nom de la catégorie</th>
+				<th>Recettes</th>
+				<th>Date de création</th>
+				<th style="width: 200px">Actions</th>
+			</tr>
+		</thead>
+		<tbody>
+			{% for category in categories %}
+				<tr>
+					<td>
+						{{ category.name }}
+					</td>
+					<td>
+						{{ category.count }}
+					</td>
+					<td>
+						{{ category.createdAt | date("d:m:Y à H:i") }}
+					</td>
+					<td class="d-flex gap-1">
+						<a href="{{ path('admin.category.edit', {id: category.id, slug: category.slug}) }}" class="btn btn-primary btn-sm action">
+							<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil-fill" viewbox="0 0 16 16">
+								<path d="M12.854.146a.5.5 0 0 0-.707 0L10.5 1.793 14.207 5.5l1.647-1.646a.5.5 0 0 0 0-.708zm.646 6.061L9.793 2.5 3.293 9H3.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.207zm-7.468 7.468A.5.5 0 0 1 6 13.5V13h-.5a.5.5 0 0 1-.5-.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.5-.5V10h-.5a.5.5 0 0 1-.175-.032l-.179.178a.5.5 0 0 0-.11.168l-2 5a.5.5 0 0 0 .65.65l5-2a.5.5 0 0 0 .168-.11z"/>
+							</svg>
+						</a>
 						<form action="{{ path('admin.category.delete', {id: category.id}) }}" method="post">
 							<input type="hidden" name="_method" value="DELETE">
 							<button type="submit" class="btn btn-danger btn-sm action">
@@ -43,8 +47,11 @@
 								</svg>
 							</button>
 						</form>
-				</td>
-			</tr>
-		</td>
+					</td>
+				</tr>
+			</td>
+		{% endfor %}
 	</tbody>
-</tr>{% endfor %}</tbody></table>{% endblock %}
+</table>
+
+{% endblock %}
